--- a/.github/workflows/zipmod.yml
+++ b/.github/workflows/zipmod.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           # Filename for archive
           filename: 'ModArchive.zip' # default is release.zip
+          # Working directory before zipping
+          directory: '.' # optional, default is .
           # Base path for archive files
           path: 'Mod' # optional, default is .
-          # Working directory before zipping
-          directory: '/' # optional, default is .
