--- a/.github/workflows/zipmod.yml
+++ b/.github/workflows/zipmod.yml
@@ -14,13 +14,14 @@ jobs:
         uses: thedoctor0/zip-release@0.7.6
         with:
           # Filename for archive
-          filename: /archive.zip # default is release.zip
+          filename: /Archived/archive.zip # default is release.zip
           # Working directory before zipping
           directory: . # optional, default is .
           # Base path for archive files
           path: Mod # optional, default is 
-      - uses: actions/checkout@v4
-      - name: Create Pull Request
-        uses: peter-evans/create-pull-request@v6
-        with:
-          add-paths: ./archive.zip
+          command: "mkdir -p Archived"
+      # - uses: actions/checkout@v4
+      # - name: Create Pull Request
+      #   uses: peter-evans/create-pull-request@v6
+      #   with:
+      #     add-paths: archive.zip
